--- a/src/languages/default.json
+++ b/src/languages/default.json
@@ -15,7 +15,8 @@
             "userInsufficientPermissions": "Sorry, but you don\"t have enough permissions to perform this command. You need the following permissions -%nl%%perms%",
             "nsfw": "Sorry, but this command can only be used in NSFW channels.",
             "cooldown": "Please wait %time% before using this command again.",
-            "arguments": "You didn\"t provide any arguments, %user%!%nl%The proper usage would be: %nl%```html%nl%%usage%%nl%```"
+            "arguments": "You didn\"t provide any arguments, %user%!%nl%The proper usage would be: %nl%```html%nl%%usage%%nl%```",
+            "interaction": "Only %user% can interact with this message."
         }
     },
     "hi": {
@@ -34,7 +35,8 @@
             "userInsufficientPermissions": "क्षमा करें, लेकिन आपके पास इस आदेश को करने के लिए पर्याप्त अनुमति नहीं है। आपको निम्नलिखित अनुमतियों की आवश्यकता है -%nl% %perms%",
             "nsfw": "क्षमा करें, लेकिन यह आदेश केवल NSFW चैनलों में उपयोग किया जा सकता है।",
             "cooldown": "कृपया इस आदेश का पुन: उपयोग करने से पहले %time% प्रतीक्षा करें।",
-            "arguments": "आपने कोई तर्क नहीं दिया, %user%!%nl%उचित उपयोग होगा: %nl%```html%nl%%usage%%nl%```"
+            "arguments": "आपने कोई तर्क नहीं दिया, %user%!%nl%उचित उपयोग होगा: %nl%```html%nl%%usage%%nl%```",
+            "interaction": "केवल %user% ही इस संदेश के साथ इंटरैक्ट कर सकते हैं।"
         }
     },
     "bg": {
@@ -53,7 +55,8 @@
             "userInsufficientPermissions": "Съжаляваме, но нямате достатъчно разрешения, за да изпълните тази команда. Нуждаете се от следните разрешения -%nl%%perms%",
             "nsfw": "Съжаляваме, но тази команда може да се използва само в NSFW канали.",
             "cooldown": "Моля, моля. изчакайте %time%, преди да използвате тази команда отново.",
-            "arguments": "Не сте предоставили никакви аргументи, %user%!%nl%Правилното използване би било: %nl%```html%nl%%usage%%nl%` ``"
+            "arguments": "Не сте предоставили никакви аргументи, %user%!%nl%Правилното използване би било: %nl%```html%nl%%usage%%nl%` ``",
+            "interaction": "Само %user% може да взаимодейства с това съобщение."
         }
     },
     "zh": {
@@ -72,7 +75,8 @@
             "userInsufficientPermissions": "抱歉，您没有足够的权限执行此命令。您需要以下权限 -%nl%%perms%",
             "nsfw": "抱歉，此命令只能在 NSFW 频道中使用。",
             "cooldown": "请在再次使用此命令之前等待 %time%。",
-            "arguments": "你没有提供任何参数，%user%!%nl%正确的用法是：%nl%```html%nl%%usage%%nl%` ``"
+            "arguments": "你没有提供任何参数，%user%!%nl%正确的用法是：%nl%```html%nl%%usage%%nl%` ``",
+            "interaction": "只有 %user% 可以与此消息交互。"
         }
     },
     "hr": {
@@ -91,7 +95,8 @@
             "userInsufficientPermissions": "Oprostite, ali nemate dovoljno dopuštenja za izvođenje ove naredbe. Potrebna su vam sljedeća dopuštenja -%nl%%perms%",
             "nsfw": "Oprostite, ali ova se naredba može koristiti samo u NSFW kanalima.",
             "cooldown": "Molim vas. pričekajte %time% prije ponovnog korištenja ove naredbe.",
-            "arguments": "Niste naveli nikakve argumente, %user%!%nl%Pravilna upotreba bi bila: %nl%```html%nl%%usage%%nl%` ``"
+            "arguments": "Niste naveli nikakve argumente, %user%!%nl%Pravilna upotreba bi bila: %nl%```html%nl%%usage%%nl%` ``",
+            "interaction": "Samo %user% može komunicirati s ovom porukom."
         }
     },
     "cs": {
@@ -110,7 +115,8 @@
             "userInsufficientPermissions": "Omlouvám se, ale k provedení tohoto příkazu nemáte dostatečná oprávnění. Potřebujete následující oprávnění -%nl% %perms%",
             "nsfw": "Došlo k chybě!0",
             "cooldown": "Došlo k chybě!1",
-            "arguments": "Došlo k chybě!2"
+            "arguments": "Došlo k chybě!2",
+            "interaction": "S touto zprávou můžete pracovat pouze %user%."
         }
     },
     "da": {
@@ -129,7 +135,8 @@
             "userInsufficientPermissions": "Beklager, men du har ikke nok tilladelser til at udføre denne kommando. Du har brug for følgende tilladelser -%nl%%perms%",
             "nsfw": "Beklager, men denne kommando kan kun bruges i NSFW-kanaler.",
             "cooldown": "Venligst vent %time%, før du bruger denne kommando igen.",
-            "arguments": "Du har ikke givet nogen argumenter, %user%!%nl%Den korrekte brug ville være: %nl%```html%nl%%usage%%nl%` ``"
+            "arguments": "Du har ikke givet nogen argumenter, %user%!%nl%Den korrekte brug ville være: %nl%```html%nl%%usage%%nl%` ``",
+            "interaction": "Kun %user% kan interagere med denne besked."
         }
     },
     "nl": {
@@ -148,7 +155,8 @@
             "userInsufficientPermissions": "Sorry, maar je hebt niet genoeg rechten om deze opdracht uit te voeren. Je hebt de volgende rechten nodig -%nl%%perms%",
             "nsfw": "Sorry, maar deze opdracht kan alleen worden gebruikt in NSFW-kanalen.",
             "cooldown": "Gelieve wacht %time% voordat je dit commando opnieuw gebruikt.",
-            "arguments": "Je hebt geen argumenten gegeven, %user%!%nl%Het juiste gebruik zou zijn: %nl%```html%nl%%usage%%nl%` ``"
+            "arguments": "Je hebt geen argumenten gegeven, %user%!%nl%Het juiste gebruik zou zijn: %nl%```html%nl%%usage%%nl%` ``",
+            "interaction": "Alleen %user% kan reageren op dit bericht."
         }
     },
     "tr": {
@@ -167,7 +175,8 @@
             "userInsufficientPermissions": "Üzgünüz, ancak bu komutu gerçekleştirmek için yeterli izniniz yok. Aşağıdaki izinlere ihtiyacınız var -%nl%%perms%",
             "nsfw": "Üzgünüz, ancak bu komut yalnızca NSFW kanallarında kullanılabilir.",
             "cooldown": "Lütfen bu komutu tekrar kullanmadan önce %time% bekleyin.",
-            "arguments": "Hiçbir argüman sağlamadınız, %user%!%nl%Doğru kullanım: %nl%```html%nl%%usage%%nl%` ``"
+            "arguments": "Hiçbir argüman sağlamadınız, %user%!%nl%Doğru kullanım: %nl%```html%nl%%usage%%nl%` ``",
+            "interaction": "Bu mesajla yalnızca %user% etkileşim kurabilir."
         }
     }
 }
