--- a/src/languages/default.json
+++ b/src/languages/default.json
@@ -5,7 +5,7 @@
             "header": "An error occurred!",
             "body": "An error occurred while completing that operation! Please try again later.",
             "tryAgain": "Please try again later.",
-            "message": "Error message: %error%"
+            "message": "Error message: ```%error%```"
         },
         "command": {
             "notImplemented": "This command is not yet implemented.",
@@ -14,7 +14,7 @@
             "botInsufficientPerissions": "Sorry, but I need the following permissions to perform this command -%nl%%perms%",
             "userInsufficientPermissions": "Sorry, but you don\"t have enough permissions to perform this command. You need the following permissions -%nl%%perms%",
             "nsfw": "Sorry, but this command can only be used in NSFW channels.",
-            "cooldown": "Please wait %time% before using this command again.",
+            "cooldown": "Please wait **%time%** before using this command again.",
             "arguments": "You didn\"t provide any arguments, %user%!%nl%The proper usage would be: %nl%```html%nl%%usage%%nl%```",
             "interaction": "Only %user% can interact with this message."
         }
@@ -25,7 +25,7 @@
             "header": "एक त्रुटि हुई!",
             "body": "उस ऑपरेशन को पूरा करते समय एक त्रुटि हुई! कृपया बाद में पुन: प्रयास करें।",
             "tryAgain": "कृपया बाद में पुन: प्रयास करें।",
-            "message": "त्रुटि संदेश:% त्रुटि%"
+            "message": "त्रुटि संदेश:%error%"
         },
         "command": {
             "notImplemented": "यह आदेश अभी तक लागू नहीं किया गया है।",
@@ -34,7 +34,7 @@
             "botInsufficientPerissions": "क्षमा करें, लेकिन मुझे इस आदेश को निष्पादित करने के लिए निम्नलिखित अनुमतियों की आवश्यकता है -%nl%%perms%",
             "userInsufficientPermissions": "क्षमा करें, लेकिन आपके पास इस आदेश को करने के लिए पर्याप्त अनुमति नहीं है। आपको निम्नलिखित अनुमतियों की आवश्यकता है -%nl% %perms%",
             "nsfw": "क्षमा करें, लेकिन यह आदेश केवल NSFW चैनलों में उपयोग किया जा सकता है।",
-            "cooldown": "कृपया इस आदेश का पुन: उपयोग करने से पहले %time% प्रतीक्षा करें।",
+            "cooldown": "कृपया इस आदेश का पुन: उपयोग करने से पहले **%time%** प्रतीक्षा करें।",
             "arguments": "आपने कोई तर्क नहीं दिया, %user%!%nl%उचित उपयोग होगा: %nl%```html%nl%%usage%%nl%```",
             "interaction": "केवल %user% ही इस संदेश के साथ इंटरैक्ट कर सकते हैं।"
         }
@@ -45,7 +45,7 @@
             "header": "Възникна грешка!",
             "body": "Възникна грешка при завършване на тази операция! Моля, опитайте отново по-късно.",
             "tryAgain": "Моля, опитайте отново по-късно.",
-            "message": "Съобщение за грешка: %error%"
+            "message": "Съобщение за грешка: ```%error%```"
         },
         "command": {
             "notImplemented": "Тази команда все още не е внедрена.",
@@ -54,7 +54,7 @@
             "botInsufficientPerissions": "Съжалявам, но имам нужда от следните разрешения, за да изпълня тази команда -%nl% %perms%",
             "userInsufficientPermissions": "Съжаляваме, но нямате достатъчно разрешения, за да изпълните тази команда. Нуждаете се от следните разрешения -%nl%%perms%",
             "nsfw": "Съжаляваме, но тази команда може да се използва само в NSFW канали.",
-            "cooldown": "Моля, моля. изчакайте %time%, преди да използвате тази команда отново.",
+            "cooldown": "Моля, моля. изчакайте **%time%**, преди да използвате тази команда отново.",
             "arguments": "Не сте предоставили никакви аргументи, %user%!%nl%Правилното използване би било: %nl%```html%nl%%usage%%nl%` ``",
             "interaction": "Само %user% може да взаимодейства с това съобщение."
         }
@@ -65,7 +65,7 @@
             "header": "发生错误！",
             "body": "完成该操作时发生错误！请稍后再试。",
             "tryAgain": "请稍后再试。",
-            "message": "错误消息：%error%"
+            "message": "错误消息：```%error%```"
         },
         "command": {
             "notImplemented": "此命令尚未实现。",
@@ -74,7 +74,7 @@
             "botInsufficientPerissions": "对不起，但我需要以下权限才能执行此命令 -%nl% %perms%",
             "userInsufficientPermissions": "抱歉，您没有足够的权限执行此命令。您需要以下权限 -%nl%%perms%",
             "nsfw": "抱歉，此命令只能在 NSFW 频道中使用。",
-            "cooldown": "请在再次使用此命令之前等待 %time%。",
+            "cooldown": "请在再次使用此命令之前等待 **%time%**。",
             "arguments": "你没有提供任何参数，%user%!%nl%正确的用法是：%nl%```html%nl%%usage%%nl%` ``",
             "interaction": "只有 %user% 可以与此消息交互。"
         }
@@ -85,7 +85,7 @@
             "header": "Došlo je do pogreške!",
             "body": "Došlo je do pogreške pri dovršavanju te operacije! Molimo pokušajte ponovo kasnije.",
             "tryAgain": "Molimo pokušajte ponovo kasnije.",
-            "message": "Poruka o pogrešci: %error%"
+            "message": "Poruka o pogrešci: ```%error%```"
         },
         "command": {
             "notImplemented": "Ova naredba još nije implementirana.",
@@ -94,7 +94,7 @@
             "botInsufficientPerissions": "Oprostite, ali trebam sljedeća dopuštenja za izvođenje ove naredbe -%nl% %perms%",
             "userInsufficientPermissions": "Oprostite, ali nemate dovoljno dopuštenja za izvođenje ove naredbe. Potrebna su vam sljedeća dopuštenja -%nl%%perms%",
             "nsfw": "Oprostite, ali ova se naredba može koristiti samo u NSFW kanalima.",
-            "cooldown": "Molim vas. pričekajte %time% prije ponovnog korištenja ove naredbe.",
+            "cooldown": "Molim vas. pričekajte **%time%** prije ponovnog korištenja ove naredbe.",
             "arguments": "Niste naveli nikakve argumente, %user%!%nl%Pravilna upotreba bi bila: %nl%```html%nl%%usage%%nl%` ``",
             "interaction": "Samo %user% može komunicirati s ovom porukom."
         }
@@ -105,7 +105,7 @@
             "header": "Došlo k chybě!",
             "body": "Při dokončení operace došlo k chybě! Zkuste to znovu později.",
             "tryAgain": "Zkuste to znovu později.",
-            "message": "Chybová zpráva: %error%"
+            "message": "Chybová zpráva: ```%error%```"
         },
         "command": {
             "notImplemented": "Tento příkaz ještě není implementován.",
@@ -125,7 +125,7 @@
             "header": "Der opstod en fejl!",
             "body": "Der opstod en fejl under fuldførelse af den handling! Prøv venligst igen senere.",
             "tryAgain": "Prøv venligst igen senere.",
-            "message": "Fejlmeddelelse: %error%"
+            "message": "Fejlmeddelelse: ```%error%```"
         },
         "command": {
             "notImplemented": "Denne kommando er endnu ikke implementeret.",
@@ -134,7 +134,7 @@
             "botInsufficientPerissions": "Beklager, men jeg har brug for følgende tilladelser for at udføre denne kommando -%nl% %perms%",
             "userInsufficientPermissions": "Beklager, men du har ikke nok tilladelser til at udføre denne kommando. Du har brug for følgende tilladelser -%nl%%perms%",
             "nsfw": "Beklager, men denne kommando kan kun bruges i NSFW-kanaler.",
-            "cooldown": "Venligst vent %time%, før du bruger denne kommando igen.",
+            "cooldown": "Venligst vent **%time%**, før du bruger denne kommando igen.",
             "arguments": "Du har ikke givet nogen argumenter, %user%!%nl%Den korrekte brug ville være: %nl%```html%nl%%usage%%nl%` ``",
             "interaction": "Kun %user% kan interagere med denne besked."
         }
@@ -145,7 +145,7 @@
             "header": "Er is een fout opgetreden!",
             "body": "Er is een fout opgetreden tijdens het voltooien van die bewerking! Probeer het later opnieuw.",
             "tryAgain": "Probeer het later opnieuw.",
-            "message": "Foutbericht: %error%"
+            "message": "Foutbericht: ```%error%```"
         },
         "command": {
             "notImplemented": "Deze opdracht is nog niet geïmplementeerd.",
@@ -154,7 +154,7 @@
             "botInsufficientPerissions": "Sorry, maar ik heb de volgende rechten nodig om deze opdracht uit te voeren -%nl% %perms%",
             "userInsufficientPermissions": "Sorry, maar je hebt niet genoeg rechten om deze opdracht uit te voeren. Je hebt de volgende rechten nodig -%nl%%perms%",
             "nsfw": "Sorry, maar deze opdracht kan alleen worden gebruikt in NSFW-kanalen.",
-            "cooldown": "Gelieve wacht %time% voordat je dit commando opnieuw gebruikt.",
+            "cooldown": "Gelieve wacht **%time%** voordat je dit commando opnieuw gebruikt.",
             "arguments": "Je hebt geen argumenten gegeven, %user%!%nl%Het juiste gebruik zou zijn: %nl%```html%nl%%usage%%nl%` ``",
             "interaction": "Alleen %user% kan reageren op dit bericht."
         }
@@ -165,7 +165,7 @@
             "header": "Bir hata oluştu!",
             "body": "Bu işlem tamamlanırken bir hata oluştu! Lütfen daha sonra tekrar deneyin.",
             "tryAgain": "Lütfen daha sonra tekrar deneyin.",
-            "message": "Hata mesajı: %error%"
+            "message": "Hata mesajı: ```%error%```"
         },
         "command": {
             "notImplemented": "Bu komut henüz uygulanmadı.",
@@ -174,7 +174,7 @@
             "botInsufficientPerissions": "Üzgünüm, ancak bu komutu gerçekleştirmek için aşağıdaki izinlere ihtiyacım var -%nl% %perms%",
             "userInsufficientPermissions": "Üzgünüz, ancak bu komutu gerçekleştirmek için yeterli izniniz yok. Aşağıdaki izinlere ihtiyacınız var -%nl%%perms%",
             "nsfw": "Üzgünüz, ancak bu komut yalnızca NSFW kanallarında kullanılabilir.",
-            "cooldown": "Lütfen bu komutu tekrar kullanmadan önce %time% bekleyin.",
+            "cooldown": "Lütfen bu komutu tekrar kullanmadan önce **%time%** bekleyin.",
             "arguments": "Hiçbir argüman sağlamadınız, %user%!%nl%Doğru kullanım: %nl%```html%nl%%usage%%nl%` ``",
             "interaction": "Bu mesajla yalnızca %user% etkileşim kurabilir."
         }
